# aws-cfn-confluentcloud-iam-serviceaccount

./: .gitignore  .rpdk-config  Makefile  README.md  activate.template  cfn-resources-iam-roles.template  confluent-secrets.template  confluentcloud-iam-serviceaccount.json  publish.template  pyproject.toml  resource-role.yaml  resource-test.template  template.yml
docs/: README.md  confluentcloudapisecrets.md
src/confluentcloud_iam_serviceaccount/: handlers.py  models.py  resource.py
