[tool.poetry]
name = "confluentcloud-iam-serviceaccount"
version = "1.0.0post0"
description = "AWS CFN Resource to provision a Confluent Cloud Service account"
authors = ["John Preston <john@ews-network.net>"]
license = "LICENSE"
readme = "README.md"
keywords = ["aws", "cloudformation", "kafka", "confluent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7"
cloudformation-cli-python-lib = "^2.1.11"
compose-x-common = "^0.4.2"
confluent-cloud-sdk = "^0.1.0"
troposphere = { version = "^4.0.1", optional = true }

[tool.poetry.extras]
resource = ["troposphere"]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
cloudformation-cli = "^0.2.23"
cloudformation-cli-python-plugin = "^2.1.5"
pyclean = "^2.0.0"
tbump = "^6.8.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "kelvin"

[tool.tbump]
github_url = "https://github.com/compose-x/ecs_composex"

[tool.tbump.version]
current = "1.0.0post0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.before_commit]]
name = "Files format"
cmd = "make conform"


[build-system]
requires = ["poetry-core>=1.0.0post0"]
build-backend = "poetry.core.masonry.api"
